--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 body {
-    background-color: lightblue
+    background-color: lightblue;
+    background-image: url("efe-kurnaz-RnCPiXixooY-unsplash.jpg");
+}
+
+.container {
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    color: white;
+
+
 }
 
