--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
-    background: url(./img/bg.jpg) * no-repeat center center fixed;
+html {
+    background: url(./img/bg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -7,6 +7,8 @@ body {
 }
 
 .container {
+    font-family: 'Roboto Slab', monospace;
+    text-shadow: 1px 1px 2px rgb(0,0,0, 0.4);
     display: flex;
     padding: 20px;
     align-items: center;
@@ -14,12 +16,13 @@ body {
     align-items: center;
 }
 
-img {
-    max-height: 250px;
+
+
+.ui-npm img{
+    max-height: 225px;
     border-radius: 50%;
     border-style: solid;
-    border-color: rgba(255, 255, 255, 0.5);
-    border-top-width: 30px;
-    border-right-width: 30px;
+    border-color: rgba(255, 255, 255);
+    border-width: 15px;
 }
 
