--- a/style.css
+++ b/style.css
@@ -1,28 +1,52 @@
 html {
     background: url(./img/bg.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
+    margin: 20px 200px 20px;
 }
 
+body {
+    margin: 5% 25% 5%;
+    box-sizing: border-box;
+    padding: 20px 20px 30px;
+    background-color: rgb(255,255,255,0.1);
+    max-width: 1000px;
+}
+
+.clearfix {
+    overflow: auto;
+}
 .container {
+    margin: auto;
+    text-align: center;
     font-family: 'Roboto Slab', monospace;
     text-shadow: 1px 1px 2px rgb(0,0,0, 0.4);
     display: flex;
-    padding: 20px;
     align-items: center;
     color: white;
-    align-items: center;
 }
-
-
-
+.ui-npm {
+    margin: auto;
+}
 .ui-npm img{
+    margin: auto;
+    display: block;
     max-height: 225px;
     border-radius: 50%;
-    border-style: solid;
-    border-color: rgba(255, 255, 255);
-    border-width: 15px;
+    border: 10px solid #ffffff;
+}
+
+.bio-personal {
+    margin: auto;
+}
+
+.contacts {
+    margin: auto;
+}
+.contacts a {
+    margin: 0px 15px;
+}
+.contacts img {
+    max-width: 50px;
+    filter: invert(100%);
 }
 
