--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     padding: 20px 20px 30px;
     background-color: rgb(255,255,255,0.1);
     max-width: 1000px;
+    box-shadow: 0px 0px 10px rgb(0,0,0,0.7);
+    border-radius: 2%;
 }
 
 .clearfix {
@@ -19,7 +21,7 @@ body {
     margin: auto;
     text-align: center;
     font-family: 'Roboto Slab', monospace;
-    text-shadow: 1px 1px 2px rgb(0,0,0, 0.4);
+    text-shadow: 1px 1px 3px rgb(0,0,0, 1);
     display: flex;
     align-items: center;
     color: white;
@@ -33,6 +35,7 @@ body {
     max-height: 225px;
     border-radius: 50%;
     border: 10px solid #ffffff;
+    box-shadow: 0px 0px 5px #000000;
 }
 
 .bio-personal {
