--- a/style.css
+++ b/style.css
@@ -5,18 +5,17 @@ html {
 }
 
 body {
-    margin: 5% 25% 5%;
+    margin: auto;
     box-sizing: border-box;
-    padding: 20px 20px 30px;
+    padding: 0px 20px 30px;
     background-color: rgb(255,255,255,0.1);
+    width: 500px;
     max-width: 1000px;
     box-shadow: 0px 0px 10px rgb(0,0,0,0.7);
     border-radius: 2%;
+    height: auto;
 }
 
-.clearfix {
-    overflow: auto;
-}
 .container {
     margin: auto;
     text-align: center;
@@ -52,4 +51,3 @@ body {
     max-width: 50px;
     filter: invert(100%);
 }
-
