--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ body {
     margin: auto;
     text-align: center;
     font-family: 'Roboto Slab', monospace;
-    text-shadow: 1px 1px 3px rgb(0,0,0, 1);
+    text-shadow: 1px 1px 10px rgb(0,0,0,1);
+    color: white;
     display: flex;
     align-items: center;
-    color: white;
+    
 }
 
 .ui-npm {
@@ -54,7 +55,7 @@ body {
 
 @media only screen and (max-width: 480px) {
     html {
-        margin: 20px 0px;
+        margin-top: 20px;
     }
     body{
         width: 380px;
